smartcard: fix lock confusion in gsd_smartcard_manager_get_login_token

gsd_smartcard_manager_get_login_token will return as soon as it finds
a login token. In doing so, it neglects to drop the lock it took before
its search began.

This commit drops the early return from the code so that the found
and not found cases follow the same exit path, where the lock is
properly dropped.

https://bugzilla.gnome.org/show_bug.cgi?id=738906